[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sev1bench"
version = "1.0.0"
description = "Sev1Bench environment for the Meta/Hugging Face OpenEnv hackathon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openenv-core>=0.2.3,<1.0.0",
  "openai>=1.0.0,<3.0.0",
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "pydantic>=2.0.0,<3.0.0",
]

[tool.setuptools]
py-modules = ["models"]

[tool.setuptools.packages.find]
include = ["server*"]
